@@ -1,0 +1,12 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:browser="http://namespaces.zope.org/browser">
+
+  <browser:page
+      for="Products.CMFPlone.interfaces.IPloneSiteRoot"
+      name="notification_email"
+      class=".emails.NotificationEmail"
+      permission="cmf.ManagePortal"
+      />
+
+</configure>
